# The-AI-Engineer-Challenge

./: .gitignore  MERGE.md  pyproject.toml  vercel.json
.cursor/rules/: branch-development-rule.mdc  frontend-rule.mdc
aimakerspace/openai_utils/: embedding.py
api/: app.py  requirements.txt
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx  personalities.js
